--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -2,9 +2,21 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: student-app
-  description: An example of a Backstage application.
-  # Example for optional annotations
+  description: Student application
+  labels:
+    example.com/custom: custom_label_value
+  annotations:
+    example.com/service-discovery: artistweb
+    circleci.com/project-slug: github/example-org/artist-website
+  tags:
+    - java
+  links:
+    - url: https://admin.example-org.com
+      title: Admin Dashboard
+      icon: dashboard
+      type: admin-dashboard
 spec:
-  type: api
+  type: API
+  lifecycle: development
   owner: vikash
-  lifecycle: experimental
+  system: students-api
