--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -6,8 +6,9 @@ metadata:
   annotations:
     backstage.io/techdocs-ref: dir:.
     github.com/project-slug: pep8speaks-org/pep8speaks
-tags:
+  tags:
     - java
+    - maven
   links:
     - url: https://admin.example-org.com
       title: Admin Dashboard
