add config yaml

--- a/api.yml
+++ b/api.yml
@@ -1,24 +1,24 @@
 apiVersion: backstage.io/v1alpha1
 kind: API
 metadata:
-  name: artist-api
+  name: students-api
   description: Retrieve artist details
 spec:
   type: openapi
-  lifecycle: production
-  owner: artist-relations-team
-  system: artist-engagement-portal
+  lifecycle: development
+  owner: vikash
+  system: students-mgmt-portal
   definition: |
     openapi: "3.0.0"
     info:
       version: 1.0.0
-      title: Artist API
+      title: Student API
       license:
         name: MIT
     servers:
-      - url: http://artist.spotify.net/v1
+      - url: http://localhost:8080/dsi
     paths:
-      /artists:
+      /check-studentinformation/{id}:
         get:
-          summary: List all artists
+          summary: List students by id
     ...
